# pokefirered

./: .gitignore  README.md
.github/workflows/: cmake-multi-platform.yml
include/: gpu_regs.h  scanline_effect.h
include/gba/: gba.h  m4a_internal.h  syscall.h  types.h
port/pokefirered/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.c
port/pokefirered/cmake/: generated_sources.cmake  native_asset_helpers.cmake  native_dev_tools.cmake  native_target_helpers.cmake  native_targets.cmake  native_tests.cmake  patch_text_printer.cmake  preprocess_c_file.cmake  run_mid2agb_from_cfg.cmake
port/pokefirered/cmake/assets/: fonts.cmake  intro.cmake  main_menu.cmake  text_window.cmake  title.cmake
port/pokefirered/docs/: native_audio_audit.md
port/pokefirered/include/: config.h  dma3.h  fame_checker.h  gflib.h  global.berry.h  global.fieldmap.h  global.h  gpu_regs.h  main.h  malloc.h  pokemon.h  random.h  scanline_effect.h  sprite.h  strings.h  task.h
port/pokefirered/include/data/text/: quest_log.h  teachy_tv.h
port/pokefirered/include/gba/: defines.h  flash_internal.h  gba.h  io_reg.h  isagbprint.h  m4a_internal.h  macro.h  syscall.h  types.h
port/pokefirered/include/pfr/: audio.h  audio_assets.h  common.h  core.h  demo.h  dma.h  m4a_1_host.h  main_runtime.h  platform.h  renderer.h  sandbox.h  scripted_input.h  storage.h  stubs.h
port/pokefirered/src/: audio.c  audio_runtime.c  core.c  demo.c  dma.c  dma3.c  gpu_regs.c  m4a_1.c  m4a_1_host.c  m4a_1_host.h  m4a_host_overrides.c  m4a_include.c  m4a_port.c  m4a_port_include.c  m4a_tables_port_include.c  main_runtime.c  native_assets.c  platform.c  renderer.c  sandbox.c  scripted_input.c  sound_port_include.c  sound_runtime.c  storage.c  stubs.c  syscall.c  task.c  text_runtime.c  text_window_assets.c
port/pokefirered/tests/: audio_driver_parity.c  check_audio_artifact_parity.py  check_title_border_bg.cmake  check_title_flames_palette.cmake  check_title_press_start_blink.cmake  integration.c  smoke.c  startup_audio_capture.c  startup_audio_manifest.txt  startup_frame_capture.c  startup_frame_manifest.txt  startup_input_manifest.txt  title_capture.c
port/pokefirered/tools/: audio_asset_tool.py  frontend_asset_tool.c  mgba_startup_capture.lua  native_asset_tool.c
port/pokefirered/tools/msvc/: getopt_compat.cpp
port/pokefirered/tools/msvc/include/: unistd.h
src/: bg.c  decompress.c  intro.c  m4a.c  m4a_tables.c  string_util.c  text_printer.c  title_screen.c
